# libpes

./: .gitignore  Makefile  PesLib.sln  libpes.pro
PesLib/: CMExeEmb.h  CTTFLetter.h  Notes.txt  PesLib.c  PesLib.vcxproj  PesLib.vcxproj.filters  PesStitchBlock.h  affine-transform.c  affine-transform.h  block-geometry.c  block-geometry.h  configure.ac  helpers-binary.c  helpers-binary.h  pes-circ.c  pes-circ.h  pes-dtext.h  pes-group-object.c  pes-group-object.h  pes-header.c  pes-header.h  pes-letter.c  pes-letter.h  pes-line.c  pes-line.h  pes-motif-data.c  pes-motif-data.h  pes-motif.c  pes-motif.h  pes-mtext.c  pes-mtext.h  pes-ntext.c  pes-ntext.h  pes-one.c  pes-one.h  pes-point.c  pes-point.h  pes-punch.c  pes-punch.h  pes-rect.c  (+22 more)
